k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knowton-dev
  labels:
    name: knowton-dev
    environment: development
